# personal-finance-api

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
backend/: Dockerfile  alembic.ini  seed.py
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  schemas.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6d06176179cd_initial_migration.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: analytics.py  budgets.py  categories.py  login.py  transactions.py  users.py  utils.py
backend/app/core/: config.py  db.py  redis.py  security.py
backend/core/: config.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_budgets.py  test_categories.py  test_login.py  test_transactions.py  test_users.py
backend/tests/crud/: test_budget.py  test_category.py  test_transaction.py  test_user.py
backend/tests/utils/: category.py  transaction.py  user.py  utils.py
