[project]
name = "personal-finance-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.49",
]

[tool.fastapi]
entrypoint = "backend.app.main:app"
