[project]
name = "personal-finance-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "emails>=1.1.1",
    "fastapi[standard]>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]

[tool.fastapi]
entrypoint = "backend.app.main:app"
